Corregidos diversos fallos. MCSV funcional
