# swagger_server/swagger/swagger.yaml
@@ -17,7 +17,7 @@ paths:
     get:
       tags:
       - track
-      summary: Gets a track info by Id
+      summary: Gets a track info by idtrack
       operationId: get_track
       parameters:
       - name: trackId
@@ -36,7 +36,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Track"
         "400":
-          description: Invalid ID supplied
+          description: Invalid idtrack supplied
         "404":
           description: Track not found
         "422":
@@ -48,7 +48,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - bandcamp_auth:
+      - oversound_auth:
         - read:tracks
       x-openapi-router-controller: swagger_server.controllers.track_controller
     delete:
@@ -81,7 +81,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - bandcamp_auth:
+      - oversound_auth:
         - write:tracks
         - read:tracks
       x-openapi-router-controller: swagger_server.controllers.track_controller
@@ -119,7 +119,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - bandcamp_auth:
+      - oversound_auth:
         - write:tracks
         - read:tracks
       x-openapi-router-controller: swagger_server.controllers.track_controller
@@ -153,30 +153,28 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
       security:
-      - bandcamp_auth:
+      - oversound_auth:
         - write:tracks
       x-openapi-router-controller: swagger_server.controllers.track_controller
 components:
   schemas:
     Track:
       required:
-      - binary
-      - id
+      - track
+      - idtrack
       type: object
       properties:
-        id:
+        idtrack:
           type: integer
           format: int64
           example: 1
-        binary:
+        track:
           type: string
           format: byte
-          example: !!binary |-
-            VTI5dVp5QlVhWFJzWlNCaWVTQkJjblJwYzNRPQ==
+          example: VTI5dVp5QlVhWFJzWlNCaWVTQkJjblJwYzNRPQ==
       example:
-        binary: !!binary |-
-          VTI5dVp5QlVhWFJzWlNCaWVTQkJjblJwYzNRPQ==
-        id: 1
+        track: VTI5dVp5QlVhWFJzWlNCaWVTQkJjblJwYzNRPQ==
+        idtrack: 1
     Error:
       required:
       - code
@@ -195,9 +193,9 @@ components:
           schema:
             $ref: "#/components/schemas/Track"
   securitySchemes:
-    bandcamp_auth:
+    oversound_auth:
       type: apiKey
-      name: token
+      name: oversound_auth
       in: cookie
-      x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_bandcamp_auth
+      x-apikeyInfoFunc: swagger_server.controllers.authorization_controller.check_oversound_auth
 
